# TimeM

./: .gitmodules  Cargo.toml  config.rs
src/: config.rs  lib.rs  macros.rs  watchdir.rs
timemctl/: Cargo.toml
timemctl/src/: cli_args.rs  config_editor.rs  macros.rs  main.rs
timemserv/: Cargo.toml
timemserv/src/: main.rs
