[package]
name = "timem"
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.204", features = ["serde_derive"] }
structopt = { version = "0.3.26", features = ["suggestions", "color", "doc"] }
directories = "5.0.1"
serde_json = "1.0.120"
humantime = "2.1.0"
parse-size = "1.0.0"

[workspace]
members = ["./timemctl"]
