[package]
name = "timemctl"
version = "0.0.1"
edition = "2021"

[dependencies]
structopt.workspace = true
directories.workspace = true
serde_json.workspace = true
serde.workspace = true
humantime.workspace = true
parse-size.workspace = true
log.workspace = true
anyhow.workspace = true
git2.workspace = true
chrono.workspace = true
timem = { path = "../" }
